add company content to page

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       <div class="intro__container animated fadeInUp">
           <img src="assets/img/blockchain_vector.svg" alt="">
           <h1>Software tailored for your needs</h1>
-          <p>We mix all detailed things together</p>
+          <p>Straightforward solutions to complex business challenges.</p>
       </div>
     </section>
 
@@ -42,10 +42,22 @@
         <div class="section-heading">
             <h2>About us</h2>
             <div class="heading-line"></div>
-            <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
+            <p>We handle technology challenges and help companies in their digital transformation.</p>
         </div>
         <p class="container">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          <div class="about">
+            <div class="content animated slideInLeft">
+              <h3>Our values define us</h3>
+              <p>
+                With years of experience and top-tier experts on board, Blockchain-IT serves medium-sized and large companies
+                globally. Profound tech knowledge coupled with business understanding is what allows us to create unique solutions
+                that power enterprises, their employees, and customers every day.
+                We stick to the latest industry trends and quality requirements to deliver powerful and secure software that fits
+                corporate environments perfectly and brings positive user experience.
+              </p>
+            </div>
+            <img class="about__art animated slideInRight" src="assets/img/team.png" alt="">
+          </div>
         </p>
     </section>
 
@@ -54,7 +66,7 @@
       <div class="section-heading">
           <h2>Services</h2>
           <div class="heading-line"></div>
-          <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
+          <p>Full-cycle services that cover every aspect of software engineering.</p>
       </div>
 
       <div class="container">
@@ -63,19 +75,19 @@
           <div class="service-item">
             <div class="service-item__icon"><i class="fab fa-ethereum"></i></i></div>
             <div class="service-item__title">Ethereum Development</div>
-            <div class="service-item__description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</div>
+            <div class="service-item__description">We offer top-tier blockchain based application development solutions to businesses across the globe.</div>
           </div>
 
           <div class="service-item">
             <div class="service-item__icon"><i class="fa fa-desktop"></i></div>
             <div class="service-item__title">Web Development</div>
-            <div class="service-item__description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</div>
+            <div class="service-item__description">We build productive & engaging web solutions for smarter work and improved customer service.</div>
           </div>
 
           <div class="service-item">
             <div class="service-item__icon"><i class="fas fa-cogs"></i></div>
             <div class="service-item__title">Custom Development</div>
-            <div class="service-item__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</div>
+            <div class="service-item__description">Need something custom? Our team of highly skilled experts can help you achieve your business goals.</div>
           </div>
         </div>
       </div>
