add contact button

--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,9 @@
             <div class="heading-line"></div>
             <p>We handle technology challenges and help companies in their digital transformation.</p>
         </div>
-        <p class="container">
+        <div class="container">
           <div class="about">
-            <div class="content animated slideInLeft">
+            <div class="about__content animated slideInLeft">
               <h3>Our values define us</h3>
               <p>
                 With years of experience and top-tier experts on board, Blockchain-IT serves medium-sized and large companies
@@ -54,9 +54,11 @@
                 corporate environments perfectly and brings positive user experience.
               </p>
             </div>
-            <img class="about__art animated slideInRight" src="assets/img/team.png" alt="">
+            <div class="about__art animated slideInRight">
+              <img src="assets/img/team.png" alt="">
+            </div> 
           </div>
-        </p>
+        </div>
     </section>
 
     <!-- Services -->
@@ -69,24 +71,24 @@
 
       <div class="container">
         <div class="services">
-
-          <div class="service-item">
-            <div class="service-item__icon"><i class="fab fa-ethereum"></i></i></div>
-            <div class="service-item__title">Ethereum Development</div>
-            <div class="service-item__description">We offer top-tier blockchain based application development solutions to businesses across the globe.</div>
+          <div class="services__item shadow-md">
+            <div class="services__icon"><i class="fab fa-ethereum"></i></div>
+            <div class="services__title">Ethereum Development</div>
+            <div class="services__content">We offer top-tier blockchain based application development solutions to businesses across the globe.</div>
           </div>
 
-          <div class="service-item">
-            <div class="service-item__icon"><i class="fa fa-desktop"></i></div>
-            <div class="service-item__title">Web Development</div>
-            <div class="service-item__description">We build productive & engaging web solutions for smarter work and improved customer service.</div>
+          <div class="services__item shadow-md">
+            <div class="services__icon"><i class="fa fa-desktop"></i></div>
+            <div class="services__title">Web Development</div>
+            <div class="services__content">We build productive & engaging web solutions for smarter work and improved customer service.</div>
           </div>
 
-          <div class="service-item">
-            <div class="service-item__icon"><i class="fas fa-cogs"></i></div>
-            <div class="service-item__title">Custom Development</div>
-            <div class="service-item__description">Need something custom? Our team of highly skilled experts can help you achieve your business goals.</div>
+          <div class="services__item shadow-md">
+            <div class="services__icon"><i class="fas fa-cogs"></i></div>
+            <div class="services__title">Custom Development</div>
+            <div class="services__content">Need something custom? Our team of highly skilled experts can help you achieve your business goals.</div>
           </div>
+
         </div>
       </div>
     </section>
@@ -96,7 +98,12 @@
         <div class="section-heading">
             <h2>Contact us</h2>
             <div class="heading-line"></div>
-            <p>Get in touch with us if you have any question or just want to say hello to the team.</p>
+            <p>For any inquiries please send us an email by clicking the button below or send email to <b>info@blockchain-it.hr</b></p>
+        </div>
+        <div class="container">
+          <div class="mail-button">
+              <a href="mailto:info@blockchain-it.hr"><i class="far fa-envelope"></i></a>
+          </div> 
         </div>
     </section>
   </main>
