--- a/src/index.html
+++ b/src/index.html
@@ -37,17 +37,12 @@
 
     <!-- About us -->
     <section class="section" id="about">
-        <div class="section-heading">
-            <h2>About us</h2>
-            <div class="heading-line"></div>
-            <p>We handle technology challenges and help companies in their digital transformation.</p>
-        </div>
         <div class="container">
           <div class="about">
             <div class="about__content animated slideInLeft">
-              <h3>Our values define us</h3>
+              <h3>About us</h3>
               <p>
-                With years of experience and top-tier experts on board, Blockchain-IT serves medium-sized and large companies
+                With years of experience and top-tier experts on board, Blockchain IT serves startup and small to medium-sized and large companies
                 globally. Profound tech knowledge coupled with business understanding is what allows us to create unique solutions
                 that power enterprises, their employees, and customers every day.
                 We stick to the latest industry trends and quality requirements to deliver powerful and secure software that fits
@@ -56,7 +51,7 @@
             </div>
             <div class="about__art animated slideInRight">
               <img src="assets/img/team.png" alt="">
-            </div> 
+            </div>
           </div>
         </div>
     </section>
@@ -72,25 +67,89 @@
       <div class="container">
         <div class="services">
           <div class="services__item shadow-md">
-            <div class="services__icon"><i class="fab fa-ethereum"></i></div>
+                <div class="services__icon"><i class="fas fa-cogs"></i></div>
+                <div class="services__title">Agile Software Development</div>
+                <div class="services__content">High-quality, custom software development build in agile mindset.</div>
+          </div>
+
+          <div class="services__item shadow-md">
+            <div class="services__icon"><i class="fab fa-ethereum"></i></i></div>
             <div class="services__title">Ethereum Development</div>
-            <div class="services__content">We offer top-tier blockchain based application development solutions to businesses across the globe.</div>
+            <div class="services__content">Smart contract development. ERC20, ERC721, ERC1400 etc. </div>
+          </div>
+
+          <div class="services__item shadow-md">
+              <div class="services__icon"><i class="fab fa-hubspot"></i></i></div>
+              <div class="services__title">Hyperledger Development</div>
+              <div class="services__content">Building permissioned networks that are tailored for your consortiums.</div>
           </div>
 
           <div class="services__item shadow-md">
             <div class="services__icon"><i class="fa fa-desktop"></i></div>
-            <div class="services__title">Web Development</div>
-            <div class="services__content">We build productive & engaging web solutions for smarter work and improved customer service.</div>
+            <div class="services__title">Frontend Development</div>
+            <div class="services__content">React development for more complex solutions. If you want it even more simple jQuerry or pure JS is an option too!</div>
           </div>
 
           <div class="services__item shadow-md">
-            <div class="services__icon"><i class="fas fa-cogs"></i></div>
-            <div class="services__title">Custom Development</div>
-            <div class="services__content">Need something custom? Our team of highly skilled experts can help you achieve your business goals.</div>
+              <div class="services__icon"><i class="fa fa-server"></i></div>
+              <div class="services__title">Backend Development</div>
+              <div class="services__content">Backend solutions written in number of languages. From standard Node.js and Spring to WebAssembly and Rust.</div>
+          </div>
+
+          <div class="services__item shadow-md">
+            <div class="services__icon"><i class="fas fa-cloud"></i></div>
+            <div class="services__title">DevOps</div>
+            <div class="services__content">We believe in building at scale. Automatization is part of our culture. Kubernetes, Ansible, Kafka, Docker, CI/CD, Zookeeper, Jenkins</div>
           </div>
 
         </div>
       </div>
+    </section>
+
+
+    <!-- Contributors -->
+    <section class="section" id="contributors">
+    <div class="section-heading">
+      <h2>Contributions</h2>
+      <div class="heading-line"></div>
+      <p>We are proud open source contributors!</p>
+    </div>
+
+        <div class="container" id="contributors_inline">
+            <div class="services">
+                <div class="services__item shadow-md">
+                    <div class="services__title">Ethererum</div>
+                    <div class="services__content">Contributing to multiple projects including Zokrates (ZkSnarks on Ethererum).</div>
+                </div>
+
+                <div class="services__item shadow-md">
+                    <div class="services__title">Hyperledger</div>
+                    <div class="services__content">Hyperledger Explorer project and Kubernetes templates for private networks</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Careers -->
+
+    <section class="section section--gray" id="careers">
+        <div class="section-heading">
+            <h2>Blockchain IT career</h2>
+            <div class="heading-line"></div>
+            <p>If this sounds interesting to you, come work with us!</p>
+        </div>
+
+      <div class="container">
+            <div class="careers">
+                <div class="careers__content animated slideInLeft">
+                    <h3></h3>
+                    <p>
+
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <!-- Contact us -->
@@ -103,9 +162,16 @@
         <div class="container">
           <div class="mail-button">
               <a href="mailto:info@blockchain-it.hr"><i class="far fa-envelope"></i></a>
-          </div> 
+          </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+              <ul class="copyright">
+                <li>&copy; Blockchain IT 2019</li><li> </a></li>
+              </ul>
+    </footer>
   </main>
 </body>
 </html>
