fix about art object-fit property, add missing navbar links

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
                 <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
                 <li class="navbar__item"><a href="#about" class="navbar__link">About us</a></li>
                 <li class="navbar__item"><a href="#services" class="navbar__link">Services</a></li>
+                <li class="navbar__item"><a href="#contributions" class="navbar__link">Contributions</a></li>
+                <li class="navbar__item"><a href="#careers" class="navbar__link">Careers</a></li>
                 <li class="navbar__item"><a href="#contact-us" class="navbar__link">Contact</a></li>
             </ul>
         </nav>
@@ -107,8 +109,8 @@
     </section>
 
 
-    <!-- Contributors -->
-    <section class="section" id="contributors">
+    <!-- Contributions -->
+    <section class="section" id="contributions">
     <div class="section-heading">
       <h2>Contributions</h2>
       <div class="heading-line"></div>
@@ -131,10 +133,9 @@
     </section>
 
     <!-- Careers -->
-
     <section class="section section--gray" id="careers">
         <div class="section-heading">
-            <h2>Blockchain IT career</h2>
+            <h2>Careers</h2>
             <div class="heading-line"></div>
             <p>If this sounds interesting to you, come work with us!</p>
         </div>
