--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blockchain-IT</title>
   <link rel="stylesheet" href="scss/main.scss">
-  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
-  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
+  <link type="text/css" rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
+  <link type="text/css" rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
 </head>
+
 <body>
   <header class="header animated fadeInDown">
     <div class="container">
-        <nav class="navbar">
-            <div class="navbar__brand">
-                <img src="assets/img/logo.png" alt="" />
-            </div>
-            <ul class="navbar__list">
-                <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
-                <li class="navbar__item"><a href="#about" class="navbar__link">About us</a></li>
-                <li class="navbar__item"><a href="#services" class="navbar__link">Services</a></li>
-                <li class="navbar__item"><a href="#contributions" class="navbar__link">Contributions</a></li>
-                <li class="navbar__item"><a href="#careers" class="navbar__link">Careers</a></li>
-                <li class="navbar__item"><a href="#contact-us" class="navbar__link">Contact</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <div class="navbar__brand">
+          <img src="assets/img/logo.png" alt="" />
+        </div>
+        <ul class="navbar__list">
+          <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
+          <li class="navbar__item"><a href="#about" class="navbar__link">About us</a></li>
+          <li class="navbar__item"><a href="#services" class="navbar__link">Services</a></li>
+          <li class="navbar__item"><a href="#contributions" class="navbar__link">Contributions</a></li>
+          <li class="navbar__item"><a href="#careers" class="navbar__link">Careers</a></li>
+          <li class="navbar__item"><a href="#contact-us" class="navbar__link">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main>
 
     <!-- Intro -->
-    <section class="section intro">
-      <div class="intro__container animated fadeInUp">
-          <img src="assets/img/blockchain_vector.svg" alt="">
-          <h1>Software tailored for your needs</h1>
-          <p>Straightforward solutions to complex business challenges.</p>
+    <section class="section leading-banner">
+      <div class="leading-banner__container animated fadeInUp">
+        <img src="assets/img/blockchain_vector.svg" alt="">
+        <h1>Software tailored for your needs</h1>
+        <p>Straightforward solutions to complex business challenges.</p>
       </div>
     </section>
 
     <!-- About us -->
     <section class="section" id="about">
-        <div class="container">
-          <div class="about">
-            <div class="about__content animated slideInLeft">
-              <h3>About us</h3>
-              <p>
-                With years of experience and top-tier experts on board, Blockchain IT serves startup and small to medium-sized and large companies
-                globally. Profound tech knowledge coupled with business understanding is what allows us to create unique solutions
-                that power enterprises, their employees, and customers every day.
-                We stick to the latest industry trends and quality requirements to deliver powerful and secure software that fits
-                corporate environments perfectly and brings positive user experience.
-              </p>
-            </div>
-            <div class="about__art animated slideInRight">
-              <img src="assets/img/team.png" alt="">
-            </div>
+      <div class="container">
+        <div class="about">
+          <div class="about__content animated slideInLeft">
+            <h3>About us</h3>
+            <p>
+              With years of experience and top-tier experts on board, Blockchain IT serves startup and small to
+              medium-sized and large companies
+              globally. Profound tech knowledge coupled with business understanding is what allows us to create unique
+              solutions
+              that power enterprises, their employees, and customers every day.
+              We stick to the latest industry trends and quality requirements to deliver powerful and secure software
+              that fits
+              corporate environments perfectly and brings positive user experience.
+            </p>
+            <a class="btn btn--primary" href="#contact-us">Let's talk <i class="fa fa-chevron-right"></i></a>
+          </div>
+          <div class="about__art animated slideInRight">
+            <img src="assets/img/team.png" alt="">
           </div>
         </div>
+      </div>
     </section>
 
     <!-- Services -->
     <section class="section section--gray" id="services">
-      <div class="section-heading">
-          <h2>Services</h2>
-          <div class="heading-line"></div>
-          <p>Full-cycle services that cover every aspect of software engineering.</p>
+      <div class="section__heading">
+        <h2>Services</h2>
+        <p>Full-cycle services that cover every aspect of software engineering.</p>
       </div>
 
       <div class="container">
         <div class="services">
           <div class="services__item shadow-md">
-                <div class="services__icon"><i class="fas fa-cogs"></i></div>
-                <div class="services__title">Agile Software Development</div>
-                <div class="services__content">High-quality, custom software development build in agile mindset.</div>
+            <div class="services__icon"><i class="fas fa-cogs"></i></div>
+            <div class="services__title">Agile Software Development</div>
+            <div class="services__content">High-quality, custom software development build in agile mindset.</div>
           </div>
 
           <div class="services__item shadow-md">
@@ -81,27 +88,30 @@
           </div>
 
           <div class="services__item shadow-md">
-              <div class="services__icon"><i class="fab fa-hubspot"></i></i></div>
-              <div class="services__title">Hyperledger Development</div>
-              <div class="services__content">Building permissioned networks that are tailored for your consortiums.</div>
+            <div class="services__icon"><i class="fab fa-hubspot"></i></i></div>
+            <div class="services__title">Hyperledger Development</div>
+            <div class="services__content">Building permissioned networks that are tailored for your consortiums.</div>
           </div>
 
           <div class="services__item shadow-md">
             <div class="services__icon"><i class="fa fa-desktop"></i></div>
             <div class="services__title">Frontend Development</div>
-            <div class="services__content">React development for more complex solutions. If you want it even more simple jQuerry or pure JS is an option too!</div>
+            <div class="services__content">React development for more complex solutions. If you want it even more simple
+              jQuery or pure JS is an option too!</div>
           </div>
 
           <div class="services__item shadow-md">
-              <div class="services__icon"><i class="fa fa-server"></i></div>
-              <div class="services__title">Backend Development</div>
-              <div class="services__content">Backend solutions written in number of languages. From standard Node.js and Spring to WebAssembly and Rust.</div>
+            <div class="services__icon"><i class="fa fa-server"></i></div>
+            <div class="services__title">Backend Development</div>
+            <div class="services__content">Backend solutions written in number of languages. From standard Node.js and
+              Spring to WebAssembly and Rust.</div>
           </div>
 
           <div class="services__item shadow-md">
             <div class="services__icon"><i class="fas fa-cloud"></i></div>
             <div class="services__title">DevOps</div>
-            <div class="services__content">We believe in building at scale. Automatization is part of our culture. Kubernetes, Ansible, Kafka, Docker, CI/CD, Zookeeper, Jenkins</div>
+            <div class="services__content">We believe in building at scale. Automatization is part of our culture.
+              Kubernetes, Ansible, Kafka, Docker, CI/CD, Zookeeper, Jenkins</div>
           </div>
 
         </div>
@@ -111,68 +121,68 @@
 
     <!-- Contributions -->
     <section class="section" id="contributions">
-    <div class="section-heading">
-      <h2>Contributions</h2>
-      <div class="heading-line"></div>
-      <p>We are proud open source contributors!</p>
-    </div>
+      <div class="section__heading">
+        <h2>Contributions</h2>
+        <p>We are proud open source contributors!</p>
+      </div>
 
-        <div class="container" id="contributors_inline">
-            <div class="services">
-                <div class="services__item shadow-md">
-                    <div class="services__title">Ethererum</div>
-                    <div class="services__content">Contributing to multiple projects including Zokrates (ZkSnarks on Ethererum).</div>
-                </div>
-
-                <div class="services__item shadow-md">
-                    <div class="services__title">Hyperledger</div>
-                    <div class="services__content">Hyperledger Explorer project and Kubernetes templates for private networks</div>
-                </div>
+      <div class="container">
+        <div class="contributions">
+          <div class="contributions__item">
+            <div class="contributions__image">
+              <img src="./assets/img/ethereum.jpg" alt="">
             </div>
+            <div class="contributions__title">Ethereum</div>
+            <div class="contributions__content">Contributing to multiple projects including ZoKrates (zkSNARKs on
+              Ethereum).</div>
+          </div>
+
+          <div class="contributions__item">
+            <div class="contributions__image">
+              <img src="./assets/img/hyperledger.png" alt="">
+            </div>
+            <div class="contributions__title">Hyperledger</div>
+            <div class="contributions__content">Hyperledger Explorer project and Kubernetes templates for private
+              networks.</div>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- Careers -->
     <section class="section section--gray" id="careers">
-        <div class="section-heading">
-            <h2>Careers</h2>
-            <div class="heading-line"></div>
-            <p>If this sounds interesting to you, come work with us!</p>
+      <div class="section__heading">
+        <h2>Careers</h2>
+        <p>If this sounds interesting to you, come work with us! We are always looking for talented people.</p>
+        <div class="container">
+          <div class="careers">
+            <img src="./assets/img/developers.png" alt="">
+          </div>
         </div>
-
-      <div class="container">
-            <div class="careers">
-                <div class="careers__content animated slideInLeft">
-                    <h3></h3>
-                    <p>
-
-                    </p>
-                </div>
-            </div>
-        </div>
-
+      </div>
     </section>
 
     <!-- Contact us -->
     <section class="section" id="contact-us">
-        <div class="section-heading">
-            <h2>Contact us</h2>
-            <div class="heading-line"></div>
-            <p>For any inquiries please send us an email by clicking the button below or send email to <b>info@blockchain-it.hr</b></p>
+      <div class="section__heading">
+        <h2>Contact us</h2>
+        <p>For any inquiries please send us an email by clicking the button below or send email to
+          <b>info@blockchain-it.hr</b></p>
+      </div>
+      <div class="container">
+        <div class="mail-button">
+          <a href="mailto:info@blockchain-it.hr"><i class="far fa-envelope"></i></a>
         </div>
-        <div class="container">
-          <div class="mail-button">
-              <a href="mailto:info@blockchain-it.hr"><i class="far fa-envelope"></i></a>
-          </div>
-        </div>
+      </div>
     </section>
 
     <!-- Footer -->
     <footer id="footer">
-              <ul class="copyright">
-                <li>&copy; Blockchain IT 2019</li><li> </a></li>
-              </ul>
+      <ul class="copyright">
+        <li>&copy; Blockchain IT 2019</li>
+      </ul>
     </footer>
   </main>
 </body>
+
 </html>
